[Gold IV] Title: 뱀, Time: 80 ms, Memory: 12472 KB -BaekjoonHub